--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="botoes">
             <button class="botao">Fazer o enem</button>
             <button class="botao">Prestar o vestibular</button>
-            <button class="botao">ser aprovada na faculdade de agronomia</button>
+            <button class="botao">Ser aprovada na faculdade de agronomia</button>
             <button class="botao">Fazer CNH Fazer uma viagem</button>
         </div>
     </section>
