--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <button class="botao">Fazer o enem</button>
             <button class="botao">Prestar o vestibular</button>
             <button class="botao">Ser aprovada na faculdade de agronomia</button>
-            <button class="botao">Fazer CNH Fazer uma viagem</button>
+            <button class="botao">Fazer CNH e Fazer uma viagem</button>
         </div>
     </section>
 </body>
