--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
         <div class="botoes">
-            <button class="botao">Fazer o enem</button>
+            <button class="botao ativo">Fazer o enem</button>
             <button class="botao">Prestar o vestibular</button>
             <button class="botao">Ser aprovada na faculdade de agronomia</button>
             <button class="botao">Fazer CNH e Fazer uma viagem</button>
         </div>
     </section>
+    <script src="main.js"></script>
 </body>
 
 </html>
