--- a/index.html
+++ b/index.html
@@ -17,6 +17,23 @@
             <button class="botao">Ser aprovada na faculdade de agronomia</button>
             <button class="botao">Fazer CNH e Fazer uma viagem</button>
         </div>
+
+<div class="abas-textos">
+<div class="aba-conteudo">
+    <h3 class="aba-conteudo-titulo-principal" >Concluir os curso de Programação</h3>
+
+</div>
+
+</div>
+
+
+
+
+
+
+
+
+
     </section>
     <script src="main.js"></script>
 </body>
