--- a/index.html
+++ b/index.html
@@ -18,13 +18,30 @@
             <button class="botao">Fazer CNH e Fazer uma viagem</button>
         </div>
 
-<div class="abas-textos">
-<div class="aba-conteudo">
-    <h3 class="aba-conteudo-titulo-principal" >Concluir os curso de Programação</h3>
+        <div class="abas-textos">
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Concluir os curso de Programação</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+            </div>
 
-</div>
+            <div class="abas-textos">
+                <div class="aba-conteudo">
+                    <h3 class="aba-conteudo-titulo-principal">Concluir os curso de Programação</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                </div>
 
-</div>
+                <div class="abas-textos">
+                    <div class="aba-conteudo">
+                        <h3 class="aba-conteudo-titulo-principal">Concluir os curso de Programação</h3>
+                        <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    </div>
+
+                    <div class="abas-textos">
+                        <div class="aba-conteudo">
+                            <h3 class="aba-conteudo-titulo-principal">Concluir os curso de Programação</h3>
+                            <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                        </div>
+                    </div>
 
 
 
