--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
 
         <div class="abas-textos">
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Concluir os curso de Programação</h3>
+                <h3 class="aba-conteudo-titulo-principal">Fazer o enem</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
             </div>
 
             <div class="abas-textos">
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Concluir os curso de Programação</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Prestar o vestibulaar</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                 </div>
 
                 <div class="abas-textos">
                     <div class="aba-conteudo">
-                        <h3 class="aba-conteudo-titulo-principal">Concluir os curso de Programação</h3>
+                        <h3 class="aba-conteudo-titulo-principal">Ser aprovada na faculdade de Agronomia</h3>
                         <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     </div>
 
                     <div class="abas-textos">
                         <div class="aba-conteudo">
-                            <h3 class="aba-conteudo-titulo-principal">Concluir os curso de Programação</h3>
+                            <h3 class="aba-conteudo-titulo-principal">Fazer CNH e Fazer uma viagemd</h3>
                             <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                         </div>
                     </div>
