--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
-                <button class="botao">Participar do evento SEBRAE</button>
-                <button class="botao">Concluir projeto do AGRINHO</button>
-                <button class="botao">Concluir meu portfólio</button>
-                <button class="botao">Prestar vestibular para a UTFPR</button>
+                <button class="botao">Fazer o Enem</button>
+                <button class="botao">Prestar o vestibular</button>
+                <button class="botao">Entrar na faculdade de Agronomia</button>
+                <button class="botao">Fazer a CNH</button>
                 </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
-                    <h3 class="aba-conteudo-titulo-principal">Participar do evento SEBRAE</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Fazer o enem</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
