--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
-                <button class="botao">Tirar a CNH</button>
-                <button class="botao">fazer o enem</button>
-                <button class="botao"> Passar em Odontologia</button>
-                <button class="botao"> fazer faculdade na unipar</button>
+                <button class="botao">Participar do evento SEBRAE</button>
+                <button class="botao">Concluir projeto do AGRINHO</button>
+                <button class="botao">Concluir meu portfólio</button>
+                <button class="botao">Prestar vestibular para a UTFPR</button>
                 </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
-                    <h3 class="aba-conteudo-titulo-principal">Tirar a CNH</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Participar do evento SEBRAE</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Fazer o enem</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Concluir projeto do AGRINHO</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Passar em Odontologia</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Concluir meu portfólio</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
@@ -86,7 +86,7 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Fazer faculdade na unipar</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Prestar vetibular para a UTFPR</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
