--- a/index.html
+++ b/index.html
@@ -14,33 +14,33 @@
 
         <div class="conteudo">
             <div class="botoes">
-                <button class="botao ativo">Concluir os cursos de Programação</button>
-                <button class="botao">Viajar para o Nordeste</button>
-                <button class="botao">Revisão para a Prova do ENEM</button>
-                <button class="botao">Aprovar todos os meus alunos em Programação</button>
+                <button class="botao ativo">Fazer o ENEM</button>
+                <button class="botao">Prestar o Vestibular na UTFPR/UNISEP</button>
+                <button class="botao">ENTRAR na faculdade de Agronomia</button>
+                <button class="botao">Fazer a CNH</button>
             </div>
 
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
-                    <h3 class="aba-conteudo-titulo-principal">Concluir os cursos de Programação</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Fazer o ENEM</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador"> </div>
                 </div>
 
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Viajar para o Nordeste</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Prestar o Vestibular na UTFPR/UNISEP</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador"> </div>
                 </div>
 
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Revisão para a prova do ENEM</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Entrar na faculdade de Agronomia</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador"> </div>
                 </div>
 
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Aprovar todos os meus alunos em Programação</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Fazer a CNH</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador"> </div>
                 </div>
